remove useless permgen